--- a/la-mia-pizzeria-static/Views/Pizza/Detail.cshtml
+++ b/la-mia-pizzeria-static/Views/Pizza/Detail.cshtml
@@ -6,3 +6,13 @@
 
 <h2>@pizza.Name</h2>
 <h3>@pizza.Category.Name</h3>
+
+<div>
+	<h3>Ingredients</h3>
+	<div class="d-flex gap-3">
+		@foreach (var ingredient in pizza.Ingredients!)
+		{
+			<span>@ingredient.Name</span>
+		}
+	</div>
+</div>
