--- a/la-mia-pizzeria-static/Views/Shared/_Header.cshtml
+++ b/la-mia-pizzeria-static/Views/Shared/_Header.cshtml
@@ -10,7 +10,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Privacy", "Pizza")">Privacy</a>
                     </li>
-                </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="@Url.Action("Index", "User")">Admin</a>
+                    </li>
+
+				</ul>  
+                
+                @await Html.PartialAsync("_LoginPartial")
             </div>
         </div>
     </nav>
