--- a/la-mia-pizzeria-static/Views/Shared/_Row.cshtml
+++ b/la-mia-pizzeria-static/Views/Shared/_Row.cshtml
@@ -15,11 +15,14 @@
     </td>
     <td class="description">@pizza.Description</td>
     <td>@pizza.Category!.Name</td>
-    <td>
-        <a href="@Url.Action("Update", "Pizza", new { Id = pizza.Id })" class="btn btn-warning">Edit</a>
-        <form asp-action="Delete" asp-controller="Pizza" asp-route-id="@pizza.Id">
-            @Html.AntiForgeryToken()
-            <button type="submit" class="btn btn-danger">Delete</button>
-        </form>
-    </td>
+    @if (User.IsInRole("Admin"))
+    {
+        <td>
+            <a href="@Url.Action("Update", "Pizza", new { Id = pizza.Id })" class="btn btn-warning">Edit</a>
+            <form asp-action="Delete" asp-controller="Pizza" asp-route-id="@pizza.Id">
+                @Html.AntiForgeryToken()
+                <button type="submit" class="btn btn-danger">Delete</button>
+            </form>
+        </td>
+    }
 </tr>
